Revision history for fbsql

0.2.1	2023-??-??
	- display BOOLEAN column type (Firebird 3.0 and later)
	- fix wildcard pattern matching in \d commands
	- \d table: display BLOB subtype in column description
	- \d table: display column character set, if available
	- \d table: show generated column information
	- \d table: display constraint definitions
	- \activity: improve output

0.2.0	2018-03-21
	- improve error message handling and display
	- adapt for libfq 0.2.0

0.1.4   2014-02-11
        - "\l" command: display database encoding
        - "\activity" command: display client encoding
        - align non-ASCII chars in column output properly
          (requires libfq 0.1.4)

0.1.3   2014-02-02
        - add RPM SPEC file
        - consolidate header files
        - change version numbering system

0.02    2014-12-25
        - initial public release